# bes-server

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum  main.go
genproto/buildeventstream/: BUILD.bazel  build_event_stream.pb.go
genproto/buildeventstream/action_cache/: BUILD.bazel  action_cache.pb.go
genproto/buildeventstream/command_line/: BUILD.bazel  command_line.pb.go
genproto/buildeventstream/failure_details/: BUILD.bazel  failure_details.pb.go
genproto/buildeventstream/invocation_policy/: BUILD.bazel  invocation_policy.pb.go
genproto/buildeventstream/option_filters/: BUILD.bazel  option_filters.pb.go
genproto/buildeventstream/package_load_metrics/: BUILD.bazel  package_load_metrics.pb.go
server/: BUILD.bazel  grpc.go  grpc_test.go  http.go  http_test.go  main.go
server/batchproto/: BUILD.bazel  build_event_batch.pb.go  build_event_batch.proto
server/store/: BUILD.bazel  interface.go  memory.go  memory_test.go
testproto/: BUILD.bazel  test_events.pb.go  test_events.proto
