load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:proto disable_global

gazelle(name = "gazelle")

go_library(
    name = "bes-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/michaeledgar/bes-server",
    visibility = ["//visibility:private"],
    deps = [
        "//genproto/buildeventstream",
        "//server",
        "//server/store",
    ],
)

go_binary(
    name = "bes-server",
    embed = [":bes-server_lib"],
    visibility = ["//visibility:public"],
)
