load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "grpc.go",
        "http.go",
    ],
    importpath = "github.com/michaeledgar/bes-server/server",
    visibility = ["//visibility:public"],
    deps = [
        "//genproto/google/devtools/build/v1:build",
        "//server/batchproto",
        "//server/store",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "grpc_test.go",
        "http_test.go",
    ],
    embed = [":server"],
    deps = [
        "//genproto/google/devtools/build/v1:build",
        "//server/store",
        "//testproto",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
        "@org_golang_google_grpc//test/bufconn",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
