load("@rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "testing_proto",
    srcs = ["test_events.proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "testproto",
    srcs = ["test_events.pb.go"],
    importpath = "github.com/michaeledgar/bes-server/testproto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
