load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "action_cache",
    srcs = ["action_cache.pb.go"],
    importpath = "github.com/michaeledgar/bes-server/genproto/buildeventstream/action_cache",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
