load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "invocation_policy",
    srcs = ["invocation_policy.pb.go"],
    importpath = "github.com/michaeledgar/bes-server/genproto/buildeventstream/invocation_policy",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
