load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "option_filters",
    srcs = ["option_filters.pb.go"],
    importpath = "github.com/michaeledgar/bes-server/genproto/buildeventstream/option_filters",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
